# calix

./: Cargo.toml  README.md  RUST_SETUP.md
docs/: architecture.md  concepts.md  operations.md  storage.md
scripts/: setup_rust_env.sh
src/: branch.rs  commit.rs  diff.rs  error.rs  global.rs  lib.rs  storage.rs  submodule.rs
tests/: integration_test.rs
