[package]
name = "calix"
version = "0.1.0"
edition = "2021"

[lib]
name = "calix"
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
rmp-serde = "1"
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
thiserror = "1"

[dev-dependencies]
proptest = "1"
tempfile = "3"
